# goit-ds-hw-01

./: Dockerfile  addressbook.pkl  hm08task01.py  pyproject.toml
data/: addressbook.pkl
